deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloodhounds-web
spec:
  selector:
    app: bloodhounds-web
  ports:
    - name: http
      port: 80
      targetPort: http
